--- a/appblogs/package.json
+++ b/appblogs/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "dateformat": "^5.0.3",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-web": "^0.19.9"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
